# hermes-outreach-engine

./: .env.example  .gitignore  LICENSE  PROJECT-STATUS.md  README.md  SHARE-BRIEF.md  next  pyproject.toml  start-demo  visual-demo
config/: default.yaml
demo/: README.md  leads.json
docs/: 10-DAY-PLAN.md  ARCHITECTURE.md  BANDA-CAPITAL-FOLLOWUP.md  BANDA-INVESTOR-DUAL-TRACK.md  BANDA-MEETING-CHEATSHEET.md  BANDA-PRE-MEETING-BRIEF.md  BANDA-REHEARSAL.md  BANDA-SHARE-MESSAGE.md  CAPITAL-SIZING-DISCORD-CHANNEL.md  DISCORD-HANDOFF-SETUP.md  ICP-CRYPTO-DISCORD.md  MEETING-BRIEF.md  MEETING-REHEARSAL.md  PRESENT-IN-DISCORD.md  SCREEN-SHARE-LIVE.md  STEP-AND-AGENT-DEMO.md  YOUTUBE-KASM-FLYWHEEL.md  YOUTUBE-V1-SHOOT-CARD.md
skills/outreach-engine/: SKILL.md
skills/outreach-engine/references/: architecture.md  compliance.md  meeting-demo-script.md
skills/outreach-engine/templates/: handoff-alert.md  sequence-crypto-discord.md
src/outreach_engine/: __init__.py  __main__.py  agent_demo.py  channels.py  cli.py  criteria.py  env_load.py  live_sim.py  models.py  notify.py  present.py  runner.py  scorer.py  sequences.py  store.py  visual_agent.py
